--- a/package.json
+++ b/package.json
@@ -8,7 +8,11 @@
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
+    "bootstrap": "^5.1.3",
+    "chart.js": "^3.6.0",
     "react": "^17.0.2",
+    "react-chartjs-2": "^3.3.0",
+    "react-charts": "^2.0.0-beta.7",
     "react-dom": "^17.0.2",
     "react-hook-form": "^7.18.0",
     "react-icons": "^4.3.1",
